<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.monarchinitiative.l2ci</groupId>
  <artifactId>l2ci</artifactId>
  <version>0.0.1</version>
  <packaging>pom</packaging>
  <name>l2ci</name>
  <parent>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-parent</artifactId>
      <version>2.6.6</version>
  </parent>
    <modules>
      <module>l2ci-core</module>
      <module>l2ci-cli</module>
      <module>l2ci-gui</module>
    </modules>

    <url>https://github.com/TheJacksonLaboratory/L4CI</url>

    <properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
      <java.version>17</java.version>
      <maven.compiler.source>${java.version}</maven.compiler.source>
      <maven.compiler.target>${java.version}</maven.compiler.target>
      <javafx.version>18</javafx.version>
      <phenol.version>2.0.0-RC6-SNAPSHOT</phenol.version>
      <lirical.version>2.0.0-RC2-SNAPSHOT</lirical.version>
      <phenopacket.version>2.0.2</phenopacket.version>
      <phenopacket-tools.version>1.0.0-RC1</phenopacket-tools.version>
      <protobuf.version>3.19.4</protobuf.version>
      <jackson.fasterxml.version>2.11.4</jackson.fasterxml.version>
      <slf4j.version>1.7.30</slf4j.version>
      <commons.io>2.8.0</commons.io>
    </properties>

    <scm>
      <connection>scm:git:git@github.com/TheJacksonLaboratory/L4CI.git</connection>
      <developerConnection>scm:git:git@github.com/TheJacksonLaboratory/L4CI.git</developerConnection>
      <url>https://github.com/TheJacksonLaboratory/L4CI</url>
      <tag>v@{project.version}</tag>
    </scm>

    <dependencyManagement>
      <dependencies>
        <dependency>
          <groupId>org.monarchinitiative.phenol</groupId>
          <artifactId>phenol-core</artifactId>
          <version>${phenol.version}</version>
        </dependency>
        <dependency>
          <groupId>org.monarchinitiative.phenol</groupId>
          <artifactId>phenol-annotations</artifactId>
          <version>${phenol.version}</version>
        </dependency>
        <dependency>
          <groupId>org.monarchinitiative.phenol</groupId>
          <artifactId>phenol-io</artifactId>
          <version>${phenol.version}</version>
        </dependency>

        <dependency>
          <groupId>commons-net</groupId>
          <artifactId>commons-net</artifactId>
          <version>3.8.0</version>
        </dependency>
        <dependency>
          <groupId>commons-io</groupId>
          <artifactId>commons-io</artifactId>
          <version>${commons.io}</version>
        </dependency>
        <dependency>
          <groupId>org.apache.commons</groupId>
          <artifactId>commons-csv</artifactId>
          <version>1.9.0</version>
        </dependency>
        <dependency>
          <groupId>org.apache.commons</groupId>
          <artifactId>commons-compress</artifactId>
          <version>1.21</version>
        </dependency>
        <dependency>
          <groupId>org.yaml</groupId>
          <artifactId>snakeyaml</artifactId>
          <version>1.33</version>
        </dependency>
        <dependency>
          <groupId>com.googlecode.json-simple</groupId>
          <artifactId>json-simple</artifactId>
          <version>1.1.1</version>
        </dependency>

        <dependency>
          <groupId>info.picocli</groupId>
          <artifactId>picocli</artifactId>
          <version>4.5.2</version>
        </dependency>

        <dependency>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-graphics</artifactId>
          <version>${javafx.version}</version>
        </dependency>
        <dependency>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-fxml</artifactId>
          <version>${javafx.version}</version>
        </dependency>
        <dependency>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-web</artifactId>
          <version>${javafx.version}</version>
        </dependency>
        <dependency>
          <groupId>org.controlsfx</groupId>
          <artifactId>controlsfx</artifactId>
          <version>11.1.1</version>
        </dependency>
        <dependency>
          <groupId>net.rgielen</groupId>
          <artifactId>javafx-weaver-spring-boot-starter</artifactId>
          <version>1.3.0</version>
        </dependency>
        <dependency>
          <groupId>org.monarchinitiative.biodownload</groupId>
          <artifactId>biodownload</artifactId>
          <version>1.1.0</version>
        </dependency>

        <dependency>
          <groupId>com.google.guava</groupId>
          <artifactId>guava</artifactId>
          <version>22.0</version>
        </dependency>

        <dependency>
          <groupId>org.phenopackets</groupId>
          <artifactId>phenopacket-schema</artifactId>
          <version>${phenopacket.version}</version>
        </dependency>
        <dependency>
          <groupId>com.google.protobuf</groupId>
          <artifactId>protobuf-java</artifactId>
          <version>${protobuf.version}</version>
        </dependency>
        <dependency>
          <groupId>com.google.protobuf</groupId>
          <artifactId>protobuf-java-util</artifactId>
          <version>${protobuf.version}</version>
        </dependency>
        <dependency>
          <groupId>org.monarchinitiative.lirical</groupId>
          <artifactId>lirical-core</artifactId>
          <version>${lirical.version}</version>
        </dependency>
        <dependency>
          <groupId>org.monarchinitiative.lirical</groupId>
          <artifactId>lirical-configuration</artifactId>
          <version>${lirical.version}</version>
          <exclusions>
            <exclusion>
              <groupId>commons-logging</groupId>
              <artifactId>commons-logging</artifactId>
            </exclusion>
          </exclusions>
        </dependency>
        <dependency>
          <groupId>org.phenopackets.phenopackettools</groupId>
          <artifactId>phenopacket-tools-io</artifactId>
          <version>${phenopacket-tools.version}</version>
        </dependency>

      </dependencies>
    </dependencyManagement>

    <!-- Dependencies used in all modules  -->
    <dependencies>
      <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-logging -->
<!--      <dependency>-->
<!--        <groupId>org.springframework.boot</groupId>-->
<!--        <artifactId>spring-boot-starter-logging</artifactId>-->
<!--      </dependency>-->
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
      </dependency>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-test</artifactId>
        <scope>test</scope>
        <exclusions>
          <exclusion>
            <groupId>org.junit.vintage</groupId>
            <artifactId>junit-vintage-engine</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
    </dependencies>

    <build>
      <pluginManagement>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>3.2.0</version>
            <configuration>
              <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
              <doclint>none</doclint>
              <quiet>true</quiet>
            </configuration>
            <executions>
              <execution>
                <id>attach-javadocs</id>
                <goals>
                  <goal>jar</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>3.2.1</version>
            <executions>
              <execution>
                <id>attach-sources</id>
                <phase>verify</phase>
                <goals>
                  <goal>jar-no-fork</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.8.1</version>
            <configuration>
              <source>${java.version}</source>
              <target>${java.version}</target>
            </configuration>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>3.0.0-M5</version>
          </plugin>
        </plugins>
      </pluginManagement>

      <!-- The plugins used in all modules -->
      <plugins>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>versions-maven-plugin</artifactId>
          <version>2.7</version>
          <configuration>
            <generateBackupPoms>false</generateBackupPoms>
          </configuration>
        </plugin>
      </plugins>
    </build>
  </project>
